2000-04-26  Richard Henderson  <rth@cygnus.com>

	* flow.c (tidy_fallthru_edge): Don't delete the jump when it's
	a still-valid conditional jump.

2000-04-26  Richard Henderson  <rth@cygnus.com>

	* jump.c (invert_jump): Always invert REG_BR_PROB.  Do it correctly.

	* bb-reorder.c (reorder_basic_blocks): Don't run estimate_probability.
	* flow.c (calculate_loop_depth): Remove.
	* output.h (calculate_loop_depth): Don't declare.
	* toplev.c (rest_of_compilation): Expand calculate_loop_depth
	inline; run estimate_probability at the same time.

2000-04-26  Neil Booth  <NeilB@earthling.net>

	* cpplib.h: "~=" is not a single pp-token.
	* cpplex.c: Correct commentary.

2000-04-26  Richard Henderson  <rth@cygnus.com>

	* flow.c (mark_set_1): New arguments code and flags; update all
	callers.  Track regno_first and regno_last; do HARD_REGNO_NREGS
	test in one place.  Tidy flags tests.  Don't bias REG_N_REFS by
	loop_depth when optimizing for size.  Do new_dead update after
	emitting REG_UNUSED notes.  Merge mark_set_reg code.
	(mark_set_reg): Remove.
	(propagate_one_insn): Use mark_set_1 for call-clobbered registers;
	arrange to not emit REG_UNUSED notes.

2000-04-26  Richard Henderson  <rth@cygnus.com>

	* flow.c (find_auto_inc): Use pbi->bb instead of BLOCK_FOR_INSN.
	* ssa.c (convert_from_ssa): Don't run compute_bb_for_insn.

2000-04-26  Richard Henderson  <rth@cygnus.com>

	* flow.c (propagate_one_insn): Break out from propagate_block.
	(init_propagate_block_info): Likewise.
	(free_propagate_block_info): Likewise.
	(propagate_block): Use them.  Export.
	* basic-block.h: Declare them all.

2000-04-26  Richard Henderson  <rth@cygnus.com>

	* basic-block.h (life_analysis): Declare here ...
	* output.h: ... not here.
	* flow.c (life_analysis): Remove nregs parameter; replace
	remove_dead_code with flags.  Remove ssa dead code check.
	Only init alias analysis if we'll use it.
	* reg-stack.c (reg_to_stack): Update life_analysis arguments.