@@ -1,5 +1,12 @@
 2000-04-26  Richard Henderson  <rth@cygnus.com>
 
+	* flow.c (update_life_info): Consider blocks null to mean the
+	universal set.
+	(calculate_global_regs_live): Likewise.
+	(life_analysis): Do that instead of collecting all_blocks.
+
+2000-04-26  Richard Henderson  <rth@cygnus.com>
+
 	* flow.c (tidy_fallthru_edge): Don't delete the jump when it's
 	a still-valid conditional jump.
 
